--- a/CryptoBlog/public/styles/posts.css
+++ b/CryptoBlog/public/styles/posts.css
@@ -1,471 +1,467 @@
-body{
-    background-color: #ffffff;
-    font-family: 'Bebas Neue', cursive;
-    
+body {
+  background-color: #ffffff;
+  font-family: "Bebas Neue", cursive;
 }
 
-.main-cards-container{
-    width: 100%;
+.main-cards-container {
+  width: 100%;
 }
 
-.main-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-.right-container{
-    width: 50%;
-    height: 100%;
-    margin-right: 10%;
+.right-container {
+  width: 50%;
+  height: 100%;
+  margin-right: 10%;
 }
 
-
-
-.all-content{
-    display: flex;
-    flex-direction: row;
+.all-content {
+  display: flex;
+  flex-direction: row;
 }
 
-.logo-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-
-#sidebar{
-    height: 100vh;
-    background-color: #5469d4;
-    border-top-right-radius: 8px;
-    display: flex;
-  }
-
-#sidebar h1{
-    font-size: 50px;
-    color: white;
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-.inactive-buttons{
-    margin: 2%;
+#sidebar {
+  height: 100vh;
+  background-color: #5469d4;
+  border-top-right-radius: 8px;
+  display: flex;
 }
 
-.label-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+#sidebar h1 {
+  font-size: 50px;
+  color: white;
 }
 
-.nav-item a{
-    font-size: 30px;
+.inactive-buttons {
+  margin: 2%;
 }
 
-.nav-buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.label-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-item a {
+  font-size: 30px;
+}
+
+.nav-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 h1 {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 h2 {
-    font-size: 1.25em;
+  font-size: 1.25em;
 }
- 
+
 p {
-    font-family: 'Red Hat Text', sans-serif;
-    color: white;
+  font-family: "Red Hat Text", sans-serif;
+  color: white;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
-
-.group{
-    display: flex;
-    flex-direction: row;
-    height: 100px;
-    justify-content: center;
+.group {
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  justify-content: center;
 }
 
-.link-items{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 8px;
+.link-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 8px;
 }
 
-.link-items img{
-    width: 50px;
+.link-items img {
+  width: 50px;
 }
 
-
-.side-content{
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.side-content {
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cards {
-    width: 100%;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 50px;
-    padding-bottom: 30px;
-    color: black;
-    position: sticky;
-    top: 0;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  color: black;
+  position: sticky;
+  top: 0;
 }
 
-
-.asset-price{
-    color: #5469d4;
+.asset-price {
+  color: #5469d4;
 }
 
 .coin-class {
-    display: grid;
-    min-width: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: minmax(50px, 60px) 1fr;
-    grid-template: 
-        "info"
-        "chart";
-    border-radius: 5px;
-    box-shadow: 10px 10px 20px 1px #5469d4;
-    border-color: white;
-    border-radius: 8px;
+  display: grid;
+  min-width: 100%;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(50px, 60px) 1fr;
+  grid-template:
+    "info"
+    "chart";
+  border-radius: 5px;
+  box-shadow: 10px 10px 20px 1px #5469d4;
+  border-color: white;
+  border-radius: 8px;
 }
 
-
 .asset-info {
-    grid-area: info;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5% 0 5%;
-    margin-top: 3%;
+  grid-area: info;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5% 0 5%;
+  margin-top: 3%;
 }
 
 .title {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 card h1 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-img{
-    width: 10%;
+img {
+  width: 10%;
 }
 
 #chart {
-    grid-area: chart;
-    border-radius: 0px 0px 30px 30px;
-    margin-top: auto;
+  grid-area: chart;
+  border-radius: 0px 0px 30px 30px;
+  margin-top: auto;
 }
 
-.coin{
-    width: 30%;
+.coin {
+  width: 30%;
 }
 
-.jumbotron{
-    background-color:  #5469d4;
+.jumbotron {
+  background-color: #5469d4;
 }
 
-.jumbotron-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.jumbotron-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .jumbotron-container p {
-    font-size: 30px;
+  font-size: 30px;
 }
 
-.form-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#favourites-button{
-    width: 100%;
-    margin-bottom: 10px;
+#favourites-button {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-#favourites-button:hover{
-    background-color: white;
-    color: green;
+#favourites-button:hover {
+  background-color: white;
+  color: green;
 }
 
-#remove-favourites-button{
-    width: 100%;
-    margin-bottom: 10px;
+#remove-favourites-button {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-#remove-favourites-button:hover{
-    background-color: white;
-    color: red;
+#remove-favourites-button:hover {
+  background-color: white;
+  color: red;
 }
 
-
-
-#form{
-    background-color: rgb(234,234,234);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 8px;
-    width: 30%;
-    height: 30rem;
-    color: black;
-    margin-bottom: 5%;
+#form {
+  background-color: rgb(234, 234, 234);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8px;
+  width: 30%;
+  height: 30rem;
+  color: black;
+  margin-bottom: 5%;
 }
 
-#form-items{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: center;
-    gap: 10px 30px;     
-    margin: auto;
-    width: 70%;
-    height: auto;
+#form-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  gap: 10px 30px;
+  margin: auto;
+  width: 70%;
+  height: auto;
 }
 
-.post{
-    width: 80%;
-    height: 80px;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 5%;
+.post {
+  width: 80%;
+  height: 80px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 5%;
 }
 
-.description{
-    background-color:white;
-    width: 99%;
-    height: 70%;
-    padding: 1rem;
-    border-left: 2px solid rgb(234,234,234);
-    margin: 0;
+.description {
+  background-color: white;
+  width: 99%;
+  height: 70%;
+  padding: 1rem;
+  border-left: 2px solid rgb(234, 234, 234);
+  margin: 0;
 }
 
-.post-container{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    color: black;
-    align-items: center;
-    max-height: fit-content;
+.post-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  align-items: center;
+  max-height: fit-content;
 }
 
-input{
-    height: 50px;
-    padding: 0;
-    border: none;
-    width: 100%;
+input {
+  height: 50px;
+  padding: 0;
+  border: none;
+  width: 100%;
 }
 
-input::placeholder{
-    text-align:start;
-    padding-left: 10px;
+input::placeholder {
+  text-align: start;
+  padding-left: 10px;
 }
 
-#create-post{
-    width: 100%;
-    margin-top: 3%;
-    border-radius: 8px;
-    background-color: #5469d4;
-    border: none;
+#create-post {
+  width: 100%;
+  margin-top: 3%;
+  border-radius: 8px;
+  background-color: #5469d4;
+  border: none;
 }
 
-#create-post:hover{
-    background-color: white;
-    color: #5469d4;
-    border: none;
-    border: 1px solid #5469d4;
+#create-post:hover {
+  background-color: white;
+  color: #5469d4;
+  border: none;
+  border: 1px solid #5469d4;
 }
 
-.container{
-    margin-top: 5%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    padding-top: 0;
-    width: 100%;
-    justify-content: center;
+.container {
+  margin-top: 5%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  padding-top: 0;
+  width: 100%;
+  justify-content: center;
 }
 
-
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 .contents-container {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 5%;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5%;
+  width: 100%;
 }
 
-.post p,h1 {
-    color: black
+.post p,
+h1 {
+  color: black;
 }
 
-button a{
-    text-decoration: none;
+button a {
+  text-decoration: none;
 }
 
 #heading {
-    color:white
+  color: white;
 }
 
-#submit{
-    width: 50%;
+#submit {
+  width: 50%;
 }
 
-.logout-button{
-        width: 100px;
-        min-height: 30px;
-        border: none;
-        border-radius: 4px;
-        background-color: #5469d4;
-        color: white;
-        font-size: 16px;
-        margin: auto;
-        margin-left: 5px;
+.logout-button {
+  width: 100px;
+  min-height: 30px;
+  border: none;
+  border-radius: 4px;
+  background-color: #5469d4;
+  color: white;
+  font-size: 16px;
+  margin: auto;
+  margin-left: 5px;
 }
 
-.logout-button:hover{
-    background-color: white;
-    color: #5469d4;
-    border: 1px solid #5469d4;
+.logout-button:hover {
+  background-color: white;
+  color: #5469d4;
+  border: 1px solid #5469d4;
 }
 
-.logout-button a{
-    text-decoration: none;
-    color: white;
+.logout-button a {
+  text-decoration: none;
+  color: white;
 }
 
-.logout-button a:hover{
-    color: #5469d4;
+.logout-button a:hover {
+  color: #5469d4;
 }
 
-.nav-class{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.nav-class {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.delete-button{
-    width: 100px;
-    min-height: 15px;
-    color: black;
-    font-size: 16px;
-    margin: auto;
-    background-color: white;
-    border: none;
+.delete-button {
+  width: 100px;
+  min-height: 15px;
+  color: black;
+  font-size: 16px;
+  margin: auto;
+  background-color: white;
+  border: none;
 }
 
-.buttons-container{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    flex-direction: column;
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
 }
 
-.buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
-.coin-class{
-    background-color: white;
-    width: 30%;
-    height: auto;
+.coin-class {
+  background-color: white;
+  width: 30%;
+  height: auto;
 }
 
-canvas{
-    width: 100%;
-    height: auto;
+canvas {
+  width: 100%;
+  height: auto;
 }
 
-#modal-button{
-    width: 100%;
-    margin-bottom: 5%;
-    background-color: #5469d4;
+#modal-button {
+  width: 100%;
+  margin-bottom: 5%;
+  background-color: #5469d4;
 }
 
-#modal-button:hover{
-    background-color: white;
-    color: #5469d4;
+#modal-button:hover {
+  background-color: white;
+  color: #5469d4;
 }
 
-.reply-button{
-    text-decoration: none;
-    border: none;
-    background-color: white;
+.reply-button {
+  text-decoration: none;
+  border: none;
+  background-color: white;
 }
 
-.post-form{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+.post-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
-.user-info{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.user-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+@media (min-width: 1201px) {
+  .contents-container {
+    padding-left: 280px;
+  }
+}
 
 @media (max-width: 1200px) {
-    .main-container{
-        width: 100%;
-    }
-    .contents-container{
-        width: 100%;
-    }
+  .main-container {
+    width: 100%;
+  }
+  .contents-container {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1100px) {
-    .main-container{
-        width: 100%;
-    }
-    .contents-container{
-        width: 100%;
-    }
-    .container{
-        margin-top: 20%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .post-container{
-        width: 100%;
-    }
-    .right-container{
-        width: 100%;
-        align-self: flex-start;
-        display:table-header-group;
-    }
+  .main-container {
+    width: 100%;
+  }
+  .contents-container {
+    width: 100%;
+  }
+  .container {
+    margin-top: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .post-container {
+    width: 100%;
+  }
+  .right-container {
+    width: 100%;
+    align-self: flex-start;
+    display: table-header-group;
+  }
 }
